--- a/SabbathText.Web/packages.config
+++ b/SabbathText.Web/packages.config
@@ -18,4 +18,5 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
+  <package id="WebJobsBuilder" version="0.1.3-beta" targetFramework="net451" />
 </packages>
