--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -69,8 +69,9 @@
     <Compile Include="Clock.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Entities\Message.cs" />
-    <Compile Include="MessageManager.cs" />
+    <Compile Include="MessageQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Supervisor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QueueStorage\QueueStorage.csproj">
