--- a/SabbathText.InboundMessageWorker/SabbathText.InboundMessageWorker.csproj
+++ b/SabbathText.InboundMessageWorker/SabbathText.InboundMessageWorker.csproj
@@ -75,6 +75,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="settings.job">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QueueStorage\QueueStorage.csproj">
