Small change fore AzureWebJobSupervisor

--- a/SabbathText.InboundMessageWorker/SabbathText.InboundMessageWorker.csproj
+++ b/SabbathText.InboundMessageWorker/SabbathText.InboundMessageWorker.csproj
@@ -75,9 +75,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="settings.job">
+    <Content Include="settings.job">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QueueStorage\QueueStorage.csproj">
