--- a/SabbathText.Web/packages.config
+++ b/SabbathText.Web/packages.config
@@ -12,11 +12,17 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.6.2" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net451" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
   <package id="WebJobsBuilder" version="0.1.3-beta" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net451" />
 </packages>
