--- a/SabbathText.Web/packages.config
+++ b/SabbathText.Web/packages.config
@@ -21,7 +21,9 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
+  <package id="Twilio" version="3.6.20" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
   <package id="WebJobsBuilder" version="0.1.3-beta" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net451" />
