--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Backend\InboundProcessors\ZipCodeProcessor.cs" />
     <Compile Include="Backend\IProcessor.cs" />
     <Compile Include="Backend\InboundMessageRouter.cs" />
-    <Compile Include="CalcSunTimes.cs" />
+    <Compile Include="SunTimes.cs" />
     <Compile Include="Clock.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Entities\Account.cs" />
