--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Backend\InboundProcessors\SubscribeProcessor.cs" />
     <Compile Include="Backend\InboundProcessors\ZipCodeProcessor.cs" />
     <Compile Include="Backend\IProcessor.cs" />
-    <Compile Include="Backend\InboundMessageRouter.cs" />
+    <Compile Include="Backend\MessageRouter.cs" />
     <Compile Include="Entities\PoisonMessage.cs" />
     <Compile Include="SunTimes.cs" />
     <Compile Include="Clock.cs" />
