--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -78,7 +78,7 @@
     <Compile Include="AzureDataProvider.cs" />
     <Compile Include="Backend\AzureWebJobSupervisor.cs" />
     <Compile Include="Backend\ConsoleSupervisor.cs" />
-    <Compile Include="Backend\InboundProcessors\AccountBasedProcessor.cs" />
+    <Compile Include="Backend\AccountBasedProcessor.cs" />
     <Compile Include="Backend\InboundProcessors\HelloProcessor.cs" />
     <Compile Include="Backend\InboundProcessors\HelpProcessor.cs" />
     <Compile Include="Backend\InboundProcessors\SubscribeProcessor.cs" />
