--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\sabbath.png" />
     <Content Include="Content\images\subscribe.png" />
     <Content Include="Content\sunrise\css\bootstrap.css" />
     <Content Include="Content\sunrise\css\bootstrap.min.css" />
