--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\thumbnail-sunset.png" />
     <Content Include="Content\images\sabbath.png" />
     <Content Include="Content\images\subscribe.png" />
     <Content Include="Content\sunrise\css\bootstrap.css" />
