--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Backend\IProcessor.cs" />
     <Compile Include="Backend\MessageRouter.cs" />
     <Compile Include="Entities\AccountIdentity.cs" />
+    <Compile Include="Entities\KeyValue.cs" />
     <Compile Include="Entities\ResourceLock.cs" />
     <Compile Include="Entities\EventMessage.cs" />
     <Compile Include="Entities\EventType.cs" />
