Implemented subscriber count

--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Backend\ConsoleSupervisor.cs" />
     <Compile Include="Backend\AccountBasedProcessor.cs" />
     <Compile Include="Backend\EventProcessors\AccountCycleProcessor.cs" />
+    <Compile Include="Backend\EventProcessors\AccountSubscribedProcessor.cs" />
     <Compile Include="Backend\EventProcessors\GreetingsRequestedProcessor.cs" />
     <Compile Include="Backend\EventProcessors\SabbathProcessor.cs" />
     <Compile Include="Backend\EventProcessors\ZipCodeUpdatedProcessor.cs" />
