--- a/SabbathText.Core/SabbathText.Core.csproj
+++ b/SabbathText.Core/SabbathText.Core.csproj
@@ -54,6 +54,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NodaTime">
+      <HintPath>..\packages\NodaTime.1.3.0\lib\net35-Client\NodaTime.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=104.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
@@ -94,10 +97,12 @@
     <Compile Include="Backend\MessageRouter.cs" />
     <Compile Include="Entities\AccountIdentity.cs" />
     <Compile Include="Entities\KeyValue.cs" />
+    <Compile Include="Entities\LocationTimeInfo.cs" />
     <Compile Include="Entities\ResourceLock.cs" />
     <Compile Include="Entities\EventMessage.cs" />
     <Compile Include="Entities\EventType.cs" />
     <Compile Include="Entities\PoisonMessage.cs" />
+    <Compile Include="Extensions\XmlExtensions.cs" />
     <Compile Include="PhoneUtility.cs" />
     <Compile Include="SunTimes.cs" />
     <Compile Include="Clock.cs" />
@@ -119,7 +124,7 @@
     <Compile Include="Backend\Supervisor.cs" />
     <Compile Include="Sabbath.cs" />
     <Compile Include="TwilioMessageSender.cs" />
-    <Compile Include="WwoLocationProvider.cs" />
+    <Compile Include="ZipSunsetLocationProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QueueStorage\QueueStorage.csproj">
