--- a/SabbathText.EventMessageWorker/packages.config
+++ b/SabbathText.EventMessageWorker/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
+  <package id="NodaTime" version="1.3.0" targetFramework="net451" />
   <package id="RestSharp" version="104.4.0" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
   <package id="Twilio" version="3.6.20" targetFramework="net451" />
