--- a/SabbathText.Web/packages.config
+++ b/SabbathText.Web/packages.config
@@ -20,6 +20,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
+  <package id="NodaTime" version="1.3.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="RestSharp" version="104.4.0" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
