Added test case TestAccountCycleWakesUpOnSabbath & fixed bugs in AccountCycleProcessor

--- a/SabbathText.Core.Tests/SabbathText.Core.Tests.csproj
+++ b/SabbathText.Core.Tests/SabbathText.Core.Tests.csproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <Compile Include="Backend\EventProcessors\AccountCycleProcessorTests.cs" />
     <Compile Include="Backend\InboundProcessors\ZipCodeProcessorTests.cs" />
+    <Compile Include="FakeClockScope.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
