Some refactoring for testability

--- a/SabbathText.Core.Tests/SabbathText.Core.Tests.csproj
+++ b/SabbathText.Core.Tests/SabbathText.Core.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="FakeClockScope.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QueueStorage\QueueStorage.csproj">
