--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -200,7 +200,9 @@
     <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Content>
     <None Include="Project_Readme.html" />
     <Content Include="Views\Shared\_BlankLayout.cshtml" />
     <Content Include="Views\GetStarted\Invalid.cshtml" />
@@ -210,6 +212,10 @@
     <Content Include="Views\Stats\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common\QueueStorage\QueueStorage.csproj">
+      <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
+      <Name>QueueStorage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SabbathText.Core\SabbathText.Core.csproj">
       <Project>{b45ea451-a493-4e23-a7a6-a496838edc00}</Project>
       <Name>SabbathText.Core</Name>
