--- a/Test/KeyValueStorage.Tests/KeyValueStorage.Tests.csproj
+++ b/Test/KeyValueStorage.Tests/KeyValueStorage.Tests.csproj
@@ -36,6 +36,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -51,7 +55,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Fixtures\Dog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="KeyValueStoreTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
