Full implementation and tests for QueueStorage

--- a/Common/QueueStorage/QueueStorage.csproj
+++ b/Common/QueueStorage/QueueStorage.csproj
@@ -71,6 +71,8 @@
     <Compile Include="AzureQueue.cs">
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
     </Compile>
+    <Compile Include="AzureQueueStore.cs" />
+    <Compile Include="EntityNotFoundException.cs" />
     <Compile Include="IQueue.cs">
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
     </Compile>
