--- a/Common/QueueStorage/QueueStorage.csproj
+++ b/Common/QueueStorage/QueueStorage.csproj
@@ -78,7 +78,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueMessage.cs" />
-    <Compile Include="QueueStore.cs" />
+    <Compile Include="InMemoryQueueStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
