--- a/Test/QueueStorage.Tests/QueueStorage.Tests.csproj
+++ b/Test/QueueStorage.Tests/QueueStorage.Tests.csproj
@@ -79,7 +79,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="InMemoryQueueStoreTests.cs" />
+    <Compile Include="QueueStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AzureQueueStoreTests.cs" />
   </ItemGroup>
