--- a/Test/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/Test/SabbathText.Tests/SabbathText.Tests.csproj
@@ -66,6 +66,10 @@
       <Project>{baeac47d-ea85-4a29-9651-a48ae1cc31e6}</Project>
       <Name>KeyValueStorage</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Common\QueueStorage\QueueStorage.csproj">
+      <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
+      <Name>QueueStorage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\SabbathText\SabbathText.csproj">
       <Project>{ab2bf8a3-020e-4cf6-b47a-e2a2c91de503}</Project>
       <Name>SabbathText</Name>
