Changed namespace to V1

--- a/Test/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/Test/SabbathText.Tests/SabbathText.Tests.csproj
@@ -55,7 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Operations\CreateAccountOperationTests.cs" />
+    <Compile Include="V1\Operations\CreateAccountOperationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEnvironmentSettings.cs" />
     <Compile Include="TestGlobals.cs" />
@@ -69,6 +69,10 @@
     <ProjectReference Include="..\..\Common\QueueStorage\QueueStorage.csproj">
       <Project>{c6cc3315-77e5-48f0-beae-e4ae8c584983}</Project>
       <Name>QueueStorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SabbathText.Compensation\SabbathText.Compensation.csproj">
+      <Project>{89227b2c-ebc6-4235-a5a8-e28ee4e034e9}</Project>
+      <Name>SabbathText.Compensation</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SabbathText\SabbathText.csproj">
       <Project>{ab2bf8a3-020e-4cf6-b47a-e2a2c91de503}</Project>
