Added appveyor support

--- a/Test/KeyValueStorage.Tests/KeyValueStorage.Tests.csproj
+++ b/Test/KeyValueStorage.Tests/KeyValueStorage.Tests.csproj
@@ -79,6 +79,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Init.cs" />
     <Compile Include="InMemoryKeyValueStoreTests.cs" />
     <Compile Include="Fixtures\Dog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
