--- a/Test/QueueStorage.Tests/QueueStorage.Tests.csproj
+++ b/Test/QueueStorage.Tests/QueueStorage.Tests.csproj
@@ -79,6 +79,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Init.cs" />
     <Compile Include="QueueStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InMemoryQueueStoreTests.cs" />
