Added the compensation agent project

--- a/SabbathText.Web/SabbathText.Web.csproj
+++ b/SabbathText.Web/SabbathText.Web.csproj
@@ -179,9 +179,6 @@
     <Content Include="Content\sunrise\css\sunrise.css" />
     <Content Include="Content\sunrise\img\bg.jpg" />
     <Content Include="Global.asax" />
-    <Content Include="Properties\WebJobs.xml" />
-    <Content Include="Properties\ligershark.webjobs.targets" />
-    <Content Include="Properties\ligershark.webjobs.ext.targets" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -192,7 +189,6 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="webjobs.wpp.targets" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -210,6 +206,7 @@
     <Content Include="Views\GetStarted\Success.cshtml" />
     <Content Include="Views\Shared\GoogleAnalytics.cshtml" />
     <Content Include="Views\Stats\Index.cshtml" />
+    <Content Include="Properties\webjobs-list.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\QueueStorage\QueueStorage.csproj">
@@ -219,18 +216,6 @@
     <ProjectReference Include="..\SabbathText.Core\SabbathText.Core.csproj">
       <Project>{b45ea451-a493-4e23-a7a6-a496838edc00}</Project>
       <Name>SabbathText.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SabbathText.EventMessageWorker\SabbathText.EventMessageWorker.csproj">
-      <Project>{CFBCD0E5-8DBF-4057-AB1D-08FBC9771103}</Project>
-      <Name>SabbathText.EventMessageWorker</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SabbathText.InboundMessageWorker\SabbathText.InboundMessageWorker.csproj">
-      <Project>{056EEAA8-275C-4F2D-88E0-BF796994D546}</Project>
-      <Name>SabbathText.InboundMessageWorker</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SabbathText.OutboundMessageWorker\SabbathText.OutboundMessageWorker.csproj">
-      <Project>{FB28C453-1686-43AC-8E86-806D396E63EB}</Project>
-      <Name>SabbathText.OutboundMessageWorker</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
@@ -261,6 +246,7 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <Import Project="..\packages\Microsoft.Web.WebJobs.Publish.1.0.2\tools\webjobs.targets" Condition="Exists('..\packages\Microsoft.Web.WebJobs.Publish.1.0.2\tools\webjobs.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
