--- a/SabbathText.Web/packages.config
+++ b/SabbathText.Web/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
