Partially implemented ProcessMessageOperation

--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Clock.cs" />
     <Compile Include="CommonErrorCodes.cs" />
     <Compile Include="Entities\AccountEntity.cs" />
+    <Compile Include="Entities\MessageEntity.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="V1\BaseOperation.cs" />
     <Compile Include="V1\CheckpointData.cs" />
