--- a/SabbathText/packages.config
+++ b/SabbathText/packages.config
@@ -5,7 +5,9 @@
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net451" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net451" />
   <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net451" developmentDependency="true" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net451" />
+  <package id="Twilio" version="3.6.27" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net451" />
 </packages>
