Added converstion context & implemented in GreetUserOperation

--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="CommonErrorCodes.cs" />
     <Compile Include="Entities\AccountEntity.cs" />
+    <Compile Include="Entities\ConversationContext.cs" />
     <Compile Include="Entities\MessageEntity.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="V1\BaseOperation.cs" />
