Implementation and tests for TimeInfo

--- a/SabbathText.Location.Tests/SabbathText.Location.Tests.csproj
+++ b/SabbathText.Location.Tests/SabbathText.Location.Tests.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="V1\TimeInfoTests.cs" />
     <Compile Include="V1\LocationInfoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
